Space flexboxes correctly so they align correctly

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,44 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 50px;
+}
+
+.right-links {
+  margin-right: 50px;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.content {
+  text-align: center;
+  align-items: center;
+  flex: 1;
+}
+
+button {
+  padding: 10px;
+}
+
+.buttons {
+  margin-bottom: 20px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
